# BacktraceException

./: .gitattributes  .gitignore  .travis.yml  BacktraceException_8cpp.html  BacktraceException_8cpp__incl.map  BacktraceException_8cpp__incl.md5  BacktraceException_8cpp_source.html  BacktraceException_8h.html  BacktraceException_8h__dep__incl.map  BacktraceException_8h__dep__incl.md5  BacktraceException_8h__incl.map  BacktraceException_8h__incl.md5  BacktraceException_8h_source.html  CMakeLists.txt  README.md  README_8md.html  README_8md_source.html  annotated.html  build.debug.sh  build.gcc4_9.debug.sh  build.sh  build.win64.debug.sh  build.win64.sh  classbacktrace__exception_1_1BacktraceException-members.html  classbacktrace__exception_1_1BacktraceException.html  classbacktrace__exception_1_1BacktraceException__coll__graph.map  classbacktrace__exception_1_1BacktraceException__coll__graph.md5  classbacktrace__exception_1_1BacktraceException__inherit__graph.map  classbacktrace__exception_1_1BacktraceException__inherit__graph.md5  classbacktrace__exception_1_1BacktraceException_a865bf08728344df9ed42bb5f6aef048f_cgraph.map  classbacktrace__exception_1_1BacktraceException_a865bf08728344df9ed42bb5f6aef048f_cgraph.md5  classbacktrace__exception_1_1BacktraceException_aef24b0571ea422191026a2292947810a_cgraph.map  classbacktrace__exception_1_1BacktraceException_aef24b0571ea422191026a2292947810a_cgraph.md5  classes.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_f49a2f39d381738bd57d05b93e0d65a4.html  dir_f49a2f39d381738bd57d05b93e0d65a4_dep.map  (+20 more)
_gcc4_9.build/Debug/: CMakeCache.txt
cmake/Modules/: .gitrepo  AddExternalAutotoolsDependency.cmake  AddExternalDependency.cmake  AddSharedStaticLibraries.cmake  BacktraceException-PackageConfig.cmake  ExportPackageWizzard.cmake  PackageConfig.cmake  README.md
cmake/Modules/Templates/: ExternalAutotools.CMakeLists.txt.in
cmake/Templates/: BacktraceExceptionConfig.cmake.in  PackageConfig.cmake.in
cmake/UncommonCMakeModules/: .gitrepo  AddExternalAutotoolsDependency.cmake  AddExternalDependency.cmake  AddSharedStaticLibraries.cmake  ConfigureDebugBuilds.cmake  ConfigureIPO.cmake  ExportPackageWizzard.cmake  FindArmadillo.cmake  FindBLAS.cmake  FindBlasLapack.cmake  FindGPerfTools.cmake  FindLAPACK.cmake  FindLibCXX.cmake  FindPthread.cmake  FindTRNG.cmake  FixupDependencies.cmake  MakePkgConfigTarget.cmake  README.md  SmarterPackageVersionFile.cmake  print_target.cmake
cmake/UncommonCMakeModules/Templates/: External.CMakeLists.txt.in  ExternalAutotools.CMakeLists.txt.in  FixupBuildTargetDependenciesScript.cmake.in  FixupDependencies.cmake.in  FixupInstallTargetDependenciesScript.cmake.in  FixupTargetDependenciesScript.cmake.in  SmarterPackageVersion-Any.cmake.in  SmarterPackageVersion-Exact.cmake.in  SmarterPackageVersion.cmake.in  SmarterPackageVersionBuildType.cmake.in  SmarterPackageVersionProvidedComponents.cmake.in  SmarterPackageVersionSystemName.cmake.in
cmake/UncommonCMakeModules/Toolchains/: Toolchain-MXE-x86_64-w64-mingw32.cmake  Toolchain-x86_64-gcc4_9-linux-gnu.cmake  Toolchain-x86_64-gcc6_5-linux-gnu.cmake  Toolchain-x86_64-w64-mingw32.cmake
cmake/UncommonCmakeModules/: .gitrepo  AddExternalDependency.cmake  AddSharedStaticLibraries.cmake  BetterPackageConfigHelpers.cmake  ConfigureDebugBuilds.cmake  ConfigureIPO.cmake  ConfigureNumericalDependenciesArmadillo.cmake  ExportPackageWizzard.cmake  FindLibCXX.cmake  FindTRNG.cmake  SmarterPackageVersionFile.cmake
cmake/UncommonCmakeModules/Templates/: External.CMakeLists.txt.in  PackageConfig.cmake.in  SmarterPackageVersion-Exact.cmake.in  SmarterPackageVersionBuildType.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  backtrace_exception_example1.cpp
include/BacktraceException/: BacktraceException.h
pdf/: BacktraceException_8cpp.tex  BacktraceException_8cpp__incl.md5  BacktraceException_8h.tex  BacktraceException_8h__dep__incl.md5  BacktraceException_8h__incl.md5  README_8md.tex  annotated.tex  classbacktrace__exception_1_1BacktraceException.tex  classbacktrace__exception_1_1BacktraceException__coll__graph.md5  classbacktrace__exception_1_1BacktraceException__inherit__graph.md5  classbacktrace__exception_1_1BacktraceException_a865bf08728344df9ed42bb5f6aef048f_cgraph.md5  classbacktrace__exception_1_1BacktraceException_aef24b0571ea422191026a2292947810a_cgraph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_f49a2f39d381738bd57d05b93e0d65a4.tex  dir_f49a2f39d381738bd57d05b93e0d65a4_dep.md5  files.tex  hierarchy.tex  index.tex  namespacebacktrace__exception.tex  namespacebacktrace__exception_a68f7b8565eefc4f9b862c25ec47ce2b7_icgraph.md5  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
scripts/: build.gcc4_9.debug.sh  build.win64.debug.sh  dist-build.sh  doc-build.sh  pdf-doc-build.sh  travis-build-test.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  namespaces_0.js  search.js  searchdata.js  variables_0.js
src/: BacktraceException.cpp  BacktraceException.h  CMakeLists.txt
test/: CMakeLists.txt  testBacktraceException.cpp
