# BacktraceException/test

set(TEST_SRCS testBacktraceException.cpp)
set(TEST_EXE testBacktraceException)
add_executable(${TEST_EXE} ${TEST_SRCS})
target_link_libraries(${TEST_EXE} BacktraceException::BacktraceException)
set_target_properties(${TEST_EXE} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
if(OPT_INSTALL_TESTING)
    if(WIN32)
        set(TESTING_INSTALL_DESTINATION bin)
    elseif(UNIX)
        set(TESTING_INSTALL_DESTINATION lib/${PROJECT_NAME}/test)
        set_target_properties(${TEST_EXE} PROPERTIES INSTALL_RPATH "\$ORIGIN/../..")
    endif()
    install(TARGETS ${TEST_EXE} RUNTIME DESTINATION ${TESTING_INSTALL_DESTINATION} COMPONENT Testing)
endif()
