# BacktraceException/test

set(TEST_SRCS testBacktraceException.cpp)
set(TEST_TARGET testBacktraceException)
add_executable(${TEST_TARGET} ${TEST_SRCS})
target_link_libraries(${TEST_TARGET} BacktraceException::BacktraceException)
set_target_properties(${TEST_TARGET} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
add_test(NAME ${TEST_TARGET} COMMAND ${CMAKE_CROSSCOMPILING_TEST_EMULATOR} "$<TARGET_FILE_NAME:${TEST_TARGET}>" WORKING_DIRECTORY ${CURRENT_BINARY_DIR})
if(OPT_INSTALL_TESTING)
    if(WIN32)
        set(TESTING_INSTALL_DESTINATION bin)
    elseif(UNIX)
        set(TESTING_INSTALL_DESTINATION lib/${PROJECT_NAME}/test)
    endif()
    set_target_properties(${TEST_TARGET} PROPERTIES INSTALL_RPATH "\$ORIGIN/../..")
    install(TARGETS ${TEST_TARGET} RUNTIME DESTINATION ${TESTING_INSTALL_DESTINATION} COMPONENT Testing)
endif()
